hks: 2022.2.14.월: 생활코딩 javascript 리팩토링 강의 내용 정리

--- a/WEB/JavaScript/리팩토링.md
+++ b/WEB/JavaScript/리팩토링.md
@@ -38,6 +38,6 @@
 ```
 
 ## 출처 & 깃허브
-[생활코딩 web/html&internet](https://opentutorials.org/course/3084)
+[생활코딩 web](https://opentutorials.org/course/3083)
 
 [github](https://github.com/KYUSEONGHAN)
